Playing with colour combination

--- a/index.html
+++ b/index.html
@@ -360,19 +360,29 @@
     }
 
     vec4 normal = estimateNormal(endPoint);
-    float shineShade = -dot(normal, normalize(endRayTangentVector));
-    float depthShade = 1.0-dist/4.0;
-    float stepsShade = 1.0-tilingSteps/10.0;
-    vec4 depthColor = vec4(depthShade,depthShade*0.65,0.1,1.0);
+    float shineShade = max(0.3-0.7*dot(normal, normalize(endRayTangentVector)), 0.0);
+    float depthShade = max(1.0-dist/5.0, 0.0);
+    float stepsShade = max(1.0-tilingSteps/10.0,0.0);
+    float comboShade = shineShade*depthShade;
+    // vec4 depthColor = vec4(depthShade,depthShade*0.65,0.1,1.0);
     // vec4 depthColor = vec4(depthShade,depthShade,depthShade,1.0);
-    vec4 stepsColor = vec4(stepsShade,stepsShade,stepsShade,1.0);
-    vec4 shineColor = vec4(shineShade,shineShade,shineShade,1.0);
+    // vec4 stepsColor = vec4(stepsShade,stepsShade,stepsShade,1.0);
+    // vec4 shineColor = vec4(shineShade,shineShade,shineShade,1.0);
+    vec4 comboColor = vec4(comboShade,comboShade,comboShade,1.0);
+    vec4 orange = vec4(1.0,0.65,0.1,1.0);
+    vec4 white = vec4(1.0,1.0,1.0,1.0);
     vec4 normalColor = vec4(abs(normal.xyz),1.0);  
     //abs is needed to avoid inconsistencies in shading coming from different paths
     //to the same cube giving different orientations of the cube
 
     // gl_FragColor = 0.85 * depthColor + 0.15 * normalColor;
-    gl_FragColor = 0.5 * depthColor + 0.5 * shineColor;
+    if(comboShade < 0.5){
+      gl_FragColor = 2.0 * comboShade * orange;
+    }
+    else{
+      gl_FragColor = 2.0*(comboShade-0.5)*white + (1.0 - 2.0*(comboShade-0.5))*orange;
+    }
+    // gl_FragColor = comboColor;
   }
 </script>
 
