--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <!-- Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
+<script src="js/lib/dat.gui.min.js"></script>
 <script src="js/HypMath.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
