--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Basic Page Needs
@@ -49,6 +49,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
+<script src="js/NonEuclideanMath.js"></script>
 <script src="js/HypMath.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
