--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
 </head>
 
 <body>
+  <div id="fps" style="position: absolute; top:10px; left:10px; width:30px; text-align:center; z-index: 100; display:block;background-color:black;">
+    0.0
+  </div>
+
+  <img id="crosshair" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:50%; margin-top:-7.5px; margin-left:-7.5px" />
+
   <img id="vr-icon" src="images/vr-icon.png" height="50px"
     style="
       position: fixed;
       bottom: 30px;
       right: 50px;
-      display: none;
-  "/>
+      display: none;"
+  />
 </body>
 
 
