Link to github added to debug ui which is now enabled by default

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 </head>
 
 <body>
-  <div id="fps" style="position: absolute; top:10px; left:10px; width:30px; text-align:center; z-index: 100; display:block;background-color:black; visibility:hidden">
+  <div id="fps" style="position: absolute; top:30px; left:30px; width:30px; text-align:center; z-index: 100; display:block;background-color:black">
     0.0
   </div>
 
-  <img id="crosshair" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:50%; margin-top:-7.5px; margin-left:-7.5px; visibility:hidden" />
+  <img id="crosshair" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:50%; margin-top:-7.5px; margin-left:-7.5px"/>
+
+  <div id="about" style="position: absolute; bottom: 30px; left:30px; font-weight: bold; z-index:100">
+    <a href="https://github.com/mtwoodard/hypVR-Ray">About</a>
+  </div>
 
   <img id="vr-icon" src="images/vr-icon.png" height="50px"
     style="
