--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
-<script src="js/NonEuclideanMath.js"></script>
+<script src="js/Honeycomb.js"></script>
 <script src="js/HypMath.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
