--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script src="js/HypMath.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
-<script src="js/vr/ViveController.js"></script>
+<script src="js/vr/VRController.js"></script>
 <script src="js/vr/VREffect.js"></script>
 <script src="js/UI.js"></script>
 <script src="js/HyperSpace.js" id="mainCode"></script>
