--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
   <img id="crosshair" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:50%; margin-top:-7.5px; margin-left:-7.5px"/>
 
-  <img id="crosshairLeft" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:25%; margin-top:-7.5px; margin-left:-7.5px"/>
+  <img id="crosshairLeft" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:25%; margin-top:-7.5px; margin-left:-7.5px; visibility: hidden"/>
 
-  <img id="crosshairRight" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:75%; margin-top:-7.5px; margin-left:-7.5px"/>
+  <img id="crosshairRight" src="images/crosshair.png" style ="height:15px; width: 15px; position:absolute; top:50%; left:75%; margin-top:-7.5px; margin-left:-7.5px; visibility: hidden"/>
 
   <div id="about" style="position: absolute; bottom: 30px; left:30px; font-weight: bold; z-index:100">
     <a href="https://github.com/mtwoodard/hypVR-Ray">About</a>
