Event listeners is now in Events.js file

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/Honeycomb.js"></script>
 <script src="js/HypMath.js"></script>
+<script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
 <script src="js/vr/VRController.js"></script>
