--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/Honeycomb.js"></script>
-<script src="js/HypMath.js"></script>
+<script src="js/GeometryMath.js"></script>
 <script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
