Renamed VRController and have been trying to get the shape of the handsets down.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/vr/VRControlsHyperbolic.js"></script>
-<script src="js/vr/VRControllerNew.js"></script>
+<script src="js/vr/VRController.js"></script>
 <script src="js/vr/VREffect.js"></script>
 <script src="js/UI.js"></script>
 <script src="js/HyperSpace.js" id="mainCode"></script>
