Renamed VRControls to controls as it is not VR-only

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <script src="js/GeometryMath.js"></script>
 <script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
-<script src="js/vr/VRControlsHyperbolic.js"></script>
+<script src="js/Controls.js"></script>
 <script src="js/vr/VRController.js"></script>
 <script src="js/vr/VREffect.js"></script>
 <script src="js/UI.js"></script>
