A whole lotta of changes, combined events and geometry math, took some if statements out of the shaders

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
 <!-- Script –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
-<script src="js/GeometryMath.js"></script>
-<script src="js/Events.js"></script>
+<script src="js/EventsMath.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/Controls.js"></script>
 <script src="js/vr/VREffect.js"></script>
