--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/Honeycomb.js"></script>
 <script src="js/GeometryMath.js"></script>
+<script src="js/Simplex.js"></script>
 <script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
 <script src="js/Controls.js"></script>
