Work on generator matrices and more porting from Honeycombs project.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
+<script src="js/lib/math.min.js"></script>
 <script src="js/Honeycomb.js"></script>
 <script src="js/GeometryMath.js"></script>
+<script src="js/ModelHelper.js"></script>
 <script src="js/Simplex.js"></script>
 <script src="js/Events.js"></script>
 <script src="js/vr/PhoneVR.js"></script>
