Some Refactored Code

--- a/index.html
+++ b/index.html
@@ -60,20 +60,22 @@
   }
 </script>
 
-<!-- Scripts
+<!-- Library Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/lib/math.min.js"></script>
+
+<!-- Scripts
+-------------------------------------------------- -->
 <script src="js/Honeycomb.js"></script>
 <script src="js/GeometryMath.js"></script>
 <script src="js/ModelHelper.js"></script>
 <script src="js/Simplex.js"></script>
 <script src="js/Events.js"></script>
-<script src="js/vr/PhoneVR.js"></script>
 <script src="js/Controls.js"></script>
-<script src="js/vr/VRController.js"></script>
-<script src="js/vr/VREffect.js"></script>
+<script src="vr/VRController.js"></script>
+<script src="vr/VREffect.js"></script>
 <script src="js/UI.js"></script>
 <script src="js/HyperSpace.js" id="mainCode"></script>
 </html>
