--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 <script type="x-shader/x-vertex" id="vertexShader">
-  uniform mat4 cameraProjection;
+  #version 300 es
+
   void main()
   {
       gl_Position = projectionMatrix * modelViewMatrix * vec4(position.xyz, 1.0);
@@ -65,6 +66,7 @@
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/lib/math.min.js"></script>
+<script src="js/lib/WebGL.js"></script>
 
 <!-- Scripts
 -------------------------------------------------- -->
