Converting to gl es 3.0

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   void main()
   {
-      gl_Position = projectionMatrix * modelViewMatrix * vec4(position.xyz, 1.0);
+      gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
   }
 </script>
 
