--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
 <!-- Scripts
 -------------------------------------------------- -->
+<script src="js/postprocessing/EffectComposer.js"></script>
+<script src="js/postprocessing/RenderPass.js"></script>
 <script src="js/Honeycomb.js"></script>
 <script src="js/GeometryMath.js"></script>
 <script src="js/ModelHelper.js"></script>
