New simplex method to find isOutside

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <script src="js/lib/dat.gui.min.js"></script>
 <script src="js/lib/math.min.js"></script>
 <script src="js/lib/WebGL.js"></script>
+<script src="js/lib/stats.min.js"></script>
 
 <!-- Scripts
 -------------------------------------------------- -->
